--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Making Changes}
 \begin{document}
 
-\plush{\osbpTitlePage{3}{}}
+\plush{\osbpTitlePage{3}{D6CUW9eZ5yk}}
 
 \qte
   [\nospell{\nospell{Bram Adams}}]
