--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -29,6 +29,12 @@
 
 \pitch{.}
 
+% flaky tests
+% integreation tests
+% jobs vs. files
+% how make your own github action plugin
+%
+
 % configure CI in Github
 % how it works in other systems? Gitlab
 
