--- a/main.bib
+++ b/main.bib
@@ -560,3 +560,58 @@
   year = {2015},
 }
 
+@article{engelfriet2009choosing,
+  title={{Choosing an Open Source License}},
+  author={Engelfriet, Arnoud},
+  journal={{IEEE Software}},
+  volume={27},
+  number={1},
+  pages={48--49},
+  year={2009},
+  publisher={IEEE},
+  doi={10.1109/MS.2010.5}
+}
+
+@article{stallman1985gnu,
+  title={{The GNU Manifesto}},
+  author={Stallman, Richard},
+  year={1985}
+}
+
+@misc{github2015licenses,
+  author = {Balter, Ben},
+  howpublished = {\url{https://github.blog/2015-03-09-open-source-license-usage-on-github-com/}},
+  month = {mar},
+  note = {[Online; accessed 20-03-2024]},
+  title = {{Open source license usage on GitHub.com}},
+  year = {2015},
+}
+
+@article{lin2006open,
+  title={{Open Source Licenses and the Creative Commons Framework: License Selection and Comparison}},
+  author={Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
+  journal={{Journal of Information Science and Engineering}},
+  volume={22},
+  number={1},
+  pages={1--17},
+  year={2006},
+  publisher={Citeseer}
+}
+
+@misc{bugayenko2014blog0721,
+  author = {Bugayenko, Yegor},
+  title = {{Master Branch Must Be Read-Only}},
+  howpublished = {\url{https://www.yegor256.com/140721.html}},
+  year = {2014},
+  month = {July},
+  note = {[Online; accessed 05-03-2024]}
+}
+
+@misc{bugayenko2019blog0423,
+  author = {Bugayenko, Yegor},
+  title = {{Elegant READMEs}},
+  howpublished = {\url{https://www.yegor256.com/190423.html}},
+  year = {2019},
+  month = {April},
+  note = {[Online; accessed 05-03-2024]}
+}
