--- a/osbp.sty
+++ b/osbp.sty
@@ -31,6 +31,7 @@
 \RequirePackage[nocn]{ffcode}
 \RequirePackage{calc}
 \RequirePackage{soul}
+\RequirePackage{doi}
 \RequirePackage{footmisc}
 \RequirePackage{booktabs}
 \RequirePackage{graphicx}
