--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -90,6 +90,12 @@
   \end{itemize}
   \source{bugayenko2019blog0423}}
 
+\qte
+  [Gede Artha Azriadi Prana]
+  {gede-prana}
+  {We conduct a qualitative study involving the manual annotation of 4,226 README file sections from 393 randomly sampled GitHub repositories. We find that information discussing the `What' and `How' of a repository is very common, while many README files lack information regarding the purpose and status of a repository.}
+  {prana2019categorizing}
+
 \thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
 
 \thought{Don't explain coding guidelines, setup GitHub Action checks}
