--- a/main.bib
+++ b/main.bib
@@ -615,3 +615,13 @@
   month = {April},
   note = {[Online; accessed 05-03-2024]}
 }
+
+@article{prana2019categorizing,
+  title={{Categorizing the Content of GitHub README Files}},
+  author={Prana, Gede Artha Azriadi and Treude, Christoph and Thung, Ferdian and Atapattu, Thushari and Lo, David},
+  journal={{Empirical Software Engineering}},
+  volume={24},
+  pages={1296--1327},
+  year={2019},
+  publisher={Springer}
+}
