--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -93,7 +93,7 @@
 \qte
   [Gede Artha Azriadi Prana]
   {gede-prana}
-  {We conduct a qualitative study involving the manual annotation of 4,226 README file sections from 393 randomly sampled GitHub repositories. We find that information discussing the `What' and `How' of a repository is very common, while many README files lack information regarding the purpose and status of a repository.}
+  {We conduct a qualitative study involving the manual annotation of 4,226 README file sections from 393 randomly sampled GitHub repositories. We find that information discussing the `What' and `How' of a repository is very common, while many README files lack information regarding the \ul{purpose} and \ul{status} of a repository.}
   {prana2019categorizing}
 
 \thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
@@ -101,6 +101,12 @@
 \thought{Don't explain coding guidelines, setup GitHub Action checks}
 
 \thought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
+
+\qte
+  [Parastou Tourani]
+  {parastou-tourani}
+  {We found that the top codes of conduct are adopted by hundreds to thousands of projects, while all of them share 5 common dimensions.}
+  {}
 
 \qte
   [Dabbish Laura]
