--- a/main.bib
+++ b/main.bib
@@ -623,5 +623,16 @@
   volume={24},
   pages={1296--1327},
   year={2019},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s10664-018-9660-3}
+}
+
+@inproceedings{tourani2017code,
+  title={{Code of Conduct in Open Source Projects}},
+  author={Tourani, Parastou and Adams, Bram and Serebrenik, Alexander},
+  booktitle={{Proceedings of the 24th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  pages={24--33},
+  year={2017},
+  organization={IEEE},
+  doi={10.1109/SANER.2017.7884606}
 }
