--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -106,7 +106,7 @@
   [Parastou Tourani]
   {parastou-tourani}
   {We found that the top codes of conduct are adopted by hundreds to thousands of projects, while all of them share 5 common dimensions.}
-  {}
+  {tourani2017code}
 
 \qte
   [Dabbish Laura]
