--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -103,10 +103,18 @@
 \thought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
 
 \qte
+  [Hana Frluckaj]
+  {hana-frluckaj}
+  {Even though including a code of conduct is considered a \ul{best practice} recommendation to \ul{attract} newcomers, there is, as of yet, no \ul{empirical} evidence backing up that claim.}
+  {li2021code}
+
+\qte
   [Parastou Tourani]
   {parastou-tourani}
   {We found that the top codes of conduct are adopted by hundreds to thousands of projects, while all of them share 5 common dimensions.}
   {tourani2017code}
+\pitch{\includegraphics[width=.8\linewidth]{codes.png}
+  \source{tourani2017code}}
 
 \qte
   [Dabbish Laura]
