--- a/main.bib
+++ b/main.bib
@@ -572,7 +572,7 @@
   doi={10.1109/MS.2010.5}
 }
 
-@article{stallman1985gnu,
+@misc{stallman1985gnu,
   title={{The GNU Manifesto}},
   author={Stallman, Richard},
   year={1985}
