--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -78,8 +78,7 @@
   \par
   Github pull request:
   \href{https://github.com/objectionary/eo/pull/2808}{objectionary/eo\#2808}
-  \end{multicols}
-}
+  \end{multicols}}
 
 \thought{In an argument, provide \ul{links} that support your point of view.}
 
