--- a/osbp.sty
+++ b/osbp.sty
@@ -35,6 +35,12 @@
 \RequirePackage{footmisc}
 \RequirePackage{booktabs}
 \RequirePackage{graphicx}
+\RequirePackage{href-ul}
+
+% see https://tex.stackexchange.com/a/256190/1449
+\RequirePackage{url}
+\def\UrlBreaks{\do\/\do-}
+\RequirePackage{breakurl}
 
 \usepackage{silence}
   \WarningFilter{bibentry}{You have used \nobibliography*}
