--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -137,12 +137,12 @@ for their research papers.
 
 Most probably, one of the following repositories will be suggested
 by the teacher for contribution during the course:
-\href{https://github.com/yegor256/cam}{yegor256/cam},
-\href{https://github.com/yegor256/rultor}{yegor256/rultor},
-\href{https://github.com/yegor256/qulice}{yegor256/qulice},
-\href{https://github.com/cqfn/jpeek}{cqfn/jpeek},
+\href{https://github.com/yegor256/cam}{yegor256/cam} (Bash, Python),
+\href{https://github.com/yegor256/rultor}{yegor256/rultor} (Java, XML),
+\href{https://github.com/yegor256/qulice}{yegor256/qulice} (Java),
+\href{https://github.com/cqfn/jpeek}{cqfn/jpeek} (Java, XML),
 and
-\href{https://github.com/objectionary/eo}{objectionary/eo}.
+\href{https://github.com/objectionary/eo}{objectionary/eo} (Java, XSLT).
 
 \newpage
 \section*{Grading}
