--- a/main.bib
+++ b/main.bib
@@ -636,3 +636,23 @@
   organization={IEEE},
   doi={10.1109/SANER.2017.7884606}
 }
+
+@inproceedings{kinsman2021software,
+  title={{How Do Software Developers Use GitHub Actions to Automate Their Workflows?}},
+  author={Kinsman, Timothy and Wessel, Mairieli and Gerosa, Marco A and Treude, Christoph},
+  booktitle={Proceedings of the 18th International Conference on Mining Software Repositories (MSR)},
+  pages={420--431},
+  year={2021},
+  organization={IEEE},
+  doi = {10.1109/MSR52588.2021.00054},
+}
+
+@inproceedings{decan2022use,
+  title={{On the Use of GitHub Actions in Software Development Repositories}},
+  author={Decan, Alexandre and Mens, Tom and Mazrae, Pooya Rostami and Golzadeh, Mehdi},
+  booktitle={Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)},
+  pages={235--245},
+  year={2022},
+  organization={IEEE},
+  doi={10.1109/ICSME55016.2022.00029}
+}
