--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -119,6 +119,12 @@
 \thought[bugayenko2014blog1007]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
 
 \qte
+  [Ben Balter]
+  {ben-balter}
+  {You essentially \ul{never} ``walk over'' to a coworker's desk, virtual or otherwise. Whenever possible, prefer issues and chat, to ``just in time'' communications.}
+  {balter2014rules}
+
+\qte
   {mark-warschauer}
   {The findings showed a tendency toward \ul{more equal} participation in computer mode. Students used language which is lexically and syntactically \ul{more formal} and complex in electronic discussion than they did in face-to-face discussion, thus demonstrating another possible advantage of computer-mediated communication.}
   {warschauer1995comparing}
