--- a/main.bib
+++ b/main.bib
@@ -587,6 +587,15 @@
   year = {2015},
 }
 
+@misc{balter2014rules,
+  author = {Balter, Ben},
+  howpublished = {\url{https://ben.balter.com/2014/11/06/rules-of-communicating-at-github/}},
+  month = {November},
+  note = {[Online; accessed 22-03-2024]},
+  title = {{15 rules for communicating at GitHub}},
+  year = {20154,
+}
+
 @article{lin2006open,
   title={{Open Source Licenses and the Creative Commons Framework: License Selection and Comparison}},
   author={Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
