--- a/main.bib
+++ b/main.bib
@@ -593,7 +593,7 @@
   month = {November},
   note = {[Online; accessed 22-03-2024]},
   title = {{15 rules for communicating at GitHub}},
-  year = {20154,
+  year = {2014},
 }
 
 @article{lin2006open,
@@ -664,4 +664,23 @@
   year={2022},
   organization={IEEE},
   doi={10.1109/ICSME55016.2022.00029}
+}
+
+@inproceedings{liu2022first,
+  title={{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
+  author={Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
+  booktitle={{Proceedings of the 37th International Conference on Automated Software Engineering}},
+  pages={1--6},
+  year={2022},
+  doi={10.1145/3551349.3561341}
+}
+
+@inproceedings{golzadeh2022rise,
+  title={{On the rise and fall of CI services in GitHub}},
+  author={Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
+  booktitle={{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  pages={662--672},
+  doi={10.1109/SANER53432.2022.00084},
+  year={2022},
+  organization={IEEE}
 }
