--- a/main.bib
+++ b/main.bib
@@ -684,3 +684,31 @@
   year={2022},
   organization={IEEE}
 }
+
+@inproceedings{durieux2020empirical,
+  title={{Empirical Study of Restarted and Flaky Builds on Travis CI}},
+  author={Durieux, Thomas and Le Goues, Claire and Hilton, Michael and Abreu, Rui},
+  booktitle={{Proceedings of the 17th International Conference on Mining Software Repositories}},
+  pages={254--264},
+  year={2020},
+  doi={10.1145/3379597.3387460}
+}
+
+@misc{bugayenko2023blog0822,
+  author = {Bugayenko, Yegor},
+  title = {{Fast Tests Help Humans, Deep Tests Help Servers}},
+  howpublished = {\url{https://www.yegor256.com/230822.html}},
+  year = {2023},
+  month = {August},
+  note = {[Online; accessed 05-03-2024]}
+}
+
+@inproceedings{beller2017oops,
+  title={{Oops, My Tests Broke the Build: An Explorative Analysis of Travis CI with GitHub}},
+  author={Beller, Moritz and Gousios, Georgios and Zaidman, Andy},
+  booktitle={{Proceedings of the 14th International Conference on Mining Software Repositories (MSR)}},
+  pages={356--367},
+  year={2017},
+  organization={IEEE},
+  doi={10.1109/MSR.2017.62}
+}
