--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -37,7 +37,7 @@
 
 \qte
   [\nospell{Yue Yu}]
-  {yue-yu.jpg}
+  {yue-yu}
   {Our preliminary models show that pull request review latency is complex, and depends on many predictors. Naturally, the size of the pull request matters: the shorter it is the faster it will be reviewed.}
   {yu2015wait}
 
