--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -74,6 +74,16 @@
 
 \thought{Provide \ff{Dockerfile}}
 
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.9\linewidth]{cam-how-to.png}
+  \par
+  {\small \url{https://github.com/yegor256/cam}\par}
+  \par\columnbreak\par
+  ``One of the largest benefits about Dockerfiles is that they can be completely \ul{self contained}. Your CI vendor of choice starts to matter less and less because the Dockerfiles themselves are portable and predictable.''
+  \source{batilo2022ways}
+  \end{multicols}}
+
 \thought{Be aware of flaky tests}
 
 \qte
