--- a/main.bib
+++ b/main.bib
@@ -712,3 +712,13 @@
   organization={IEEE},
   doi={10.1109/MSR.2017.62}
 }
+
+@misc{batilo2022ways,
+  author = {Batilo, Aaron},
+  howpublished = {\url{https://ben.balter.com/2014/11/06/rules-of-communicating-at-github/}},
+  month = {November},
+  note = {[Online; accessed 03-04-2024]},
+  title = {{The 4 ways to run your unit tests in CI with Dockerfiles}},
+  year = {2022},
+}
+
