--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -100,4 +100,21 @@
 
 \thought{Implement your own GitHub Actions}
 
+\qte
+  [Sk Golam Saroar]
+  {sk-golam-saroar}
+  {We found that developers find the composition of YAML files, which are essential for GitHub Action integration, \ul{challenging} and \ul{error-prone}.}
+  {saroar2023developers}
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.9\linewidth]{actions.png}
+  \par
+  {\small \url{https://github.com/marketplace}\par}
+  \par\columnbreak\par
+  ``While there are over \ul{15,000} Actions in existence, an increasing number of Actions are published every day on the Marketplace. This creates the question as to why developers prefer to develop new Actions rather than reusing the existing ones.''
+  \source{saroar2023developers}
+  \end{multicols}}
+\pitch{\includegraphics[width=.75\linewidth]{why-action.png}
+  \source{saroar2023developers}}
+
 \end{document}
