--- a/main.bib
+++ b/main.bib
@@ -722,3 +722,11 @@
   year = {2022},
 }
 
+@inproceedings{saroar2023developers,
+  title={{Developers’ Perception of GitHub Actions: A Survey Analysis}},
+  author={Saroar, Sk Golam and Nayebi, Maleknaz},
+  booktitle={{Proceedings of the 27th International Conference on Evaluation and Assessment in Software Engineering}},
+  pages={121--130},
+  year={2023},
+  doi={10.1145/3593434.3593475}
+}
