--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -98,6 +98,12 @@
 
 \thought{Use caching in GitHub Action}
 
+\qte
+  [Islem Bouzenia]
+  {islem-bouzenia}
+  {The majority of the used resources is consumed by testing and building (91.2\%), which is triggered by pull requests (50.7\%), pushes (30.9\%), and regularly scheduled workflows (15.5\%). While existing optimizations, such as \ul{caching} (adopted by 32.9\% of paid-tier repositories), demonstrate a positive impact, they overall remain \ul{underutilized}.}
+  {bouzenia2024resource}
+
 \thought{Implement your own GitHub Actions}
 
 \qte
