--- a/main.bib
+++ b/main.bib
@@ -730,3 +730,12 @@
   year={2023},
   doi={10.1145/3593434.3593475}
 }
+
+@inproceedings{bouzenia2024resource,
+  title={{Resource Usage and Optimization Opportunities in Workflows of GitHub Actions}},
+  author={Bouzenia, Islem and Pradel, Michael},
+  booktitle={{Proceedings of the 46th International Conference on Software Engineering}},
+  pages={1--12},
+  year={2024},
+  doi={10.1145/3597503.3623303}
+}
