--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -30,6 +30,12 @@
 \thought{Setup continuous integration in order to prove that your product works}
 
 \qte
+  [Bogdan Vasilescu]
+  {bogdan-vasilescu}
+  {Teams using CI are significantly more effective at merging pull requests submitted by core members. Availability of CI is also associated with external contributors having fewer pull requests rejected.}
+  {vasilescu2015quality}
+
+\qte
   [Pei Liu]
   {pei-liu}
   {We start by collecting a set of 84,475 open-source Android apps from the most popular three online code hosting sites, namely Github, GitLab, and Bitbucket. We then look into those apps and find that only around 10\% of apps have leveraged CI/CD services, i.e., the \ul{majority} of open-source Android apps are developed \ul{without} accessing CI/CD services.}
