--- a/main.bib
+++ b/main.bib
@@ -739,3 +739,12 @@
   year={2024},
   doi={10.1145/3597503.3623303}
 }
+
+@inproceedings{vasilescu2015quality,
+  title={{Quality and Productivity Outcomes Relating to Continuous Integration in GitHub}},
+  author={Vasilescu, Bogdan and Yu, Yue and Wang, Huaimin and Devanbu, Premkumar and Filkov, Vladimir},
+  booktitle={{Proceedings of the 10th Joint Meeting on Foundations of Software Engineering}},
+  pages={805--816},
+  year={2015},
+  doi={10.1145/2786805.2786850}
+}
