--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Reviewing Changes}
 \begin{document}
 
-\plush{\osbpTitlePage{4}{}}
+\plush{\osbpTitlePage{4}{TJ83ePwyH_A}}
 
 \qte
   [\nospell{\nospell{Martin Fowler}}]
