--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Setting Guidelines}
 \begin{document}
 
-\plush{\osbpTitlePage{5}{}}
+\plush{\osbpTitlePage{5}{mWi2S5FJiJ4}}
 
 \thought{Have \ff{LICENSE.txt} file with an MIT license in your repository}
 
@@ -90,6 +90,14 @@
   {gede-prana}
   {We conduct a qualitative study involving the manual annotation of 4,226 README file sections from 393 randomly sampled GitHub repositories. We find that information discussing the `What' and `How' of a repository is very common, while many README files lack information regarding the \ul{purpose} and \ul{status} of a repository.}
   {prana2019categorizing}
+
+\qte
+  [Simon Weber]
+  {simon-weber}
+  {Upon investigation, popular projects were found to have larger READMEs (median 2 kilobytes vs. 500 bytes). Also, 95\% of popular projects have nonempty READMEs, compared to only 65\% of unpopular projects.}
+  {weber2014makes}
+\pitch{\includegraphics[width=.75\linewidth]{readme-size.png}
+  \source{weber2014makes}}
 
 \thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
 
