--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Integrating}
 \begin{document}
 
-\plush{\osbpTitlePage{6}{}}
+\plush{\osbpTitlePage{6}{iyJ4wiCb9xM}}
 
 \thought{Setup continuous integration in order to prove that your product works}
 
