--- a/main.bib
+++ b/main.bib
@@ -748,3 +748,13 @@
   year={2015},
   doi={10.1145/2786805.2786850}
 }
+
+@inproceedings{weber2014makes,
+  title={{What Makes An Open Source Code Popular on GitHub?}},
+  author={Weber, Simon and Luo, Jiebo},
+  booktitle={{Proceedings of the International Conference on Data Mining Workshop}},
+  pages={851--855},
+  year={2014},
+  organization={IEEE},
+  doi={10.1109/ICDMW.2014.55}
+}
